# tb

./: LICENSE  README.md  index.html  package.json  tailwind.config.cjs
src/: app.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: applications.rs  keychain.rs  mod.rs
src/api/: applications.ts  todoist.ts
src/components/: action-bar.tsx  cmdk-styled.tsx  results.tsx
src/components/sections/: applications.tsx  todoist.tsx
src/extensions/application-finder/: group.tsx  index.ts
src/extensions/todoist/: api.ts  group.tsx  index.ts
src/extensions/todoist/pages/: create-task.tsx
src/lib/: cn.ts  context.ts  use-zod-form.ts
src/pages/todoist/: create-task.tsx
src/toolkit/: extension.ts  index.ts  keychain.ts
src/toolkit/components/: command-group.tsx  command-item.tsx
src/toolkit/hooks/: use-keyboard-action.ts
